--- a/com.basf.xpview.model/plugin.xml
+++ b/com.basf.xpview.model/plugin.xml
@@ -37,10 +37,20 @@
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
-            locationURI="menu:org.eclipse.ui.main.menu?after=additions">
+            locationURI="menu:org.eclipse.ui.main.menu?before=additions">
+         <menu
+               id="File"
+               label="File">
+            <command
+                  commandId="com.basf.xpview.model.handlers.ImportFileHandler"
+                  icon="icons/disk.png"
+                  label="Open"
+                  style="push">
+            </command>
+         </menu>
       </menuContribution>
       <menuContribution
-            locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
+            locationURI="toolbar:org.eclipse.ui.main.toolbar?before=additions">
          <toolbar
                id="com.basf.xpview.model.toolbars.sampleToolbar">
             <command
@@ -51,6 +61,26 @@
             </command>
          </toolbar>
       </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="com.basf.xpview.model.prefs.PrefsDefaults">
+      </initializer>
+   </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="com.basf.xpview.model.prefs.PrefsPageImport"
+            id="PrefsPageImport"
+            name="Import">
+      </page>
+      <page
+            category="PrefsPageImport"
+            class="com.basf.xpview.model.prefs.PrefsPageImportAVEVA"
+            id="PrefsPageImportAVEVA"
+            name="AVEVA import">
+      </page>
    </extension>
 
 </plugin>
