--- a/com.basf.xpview/plugin.xml
+++ b/com.basf.xpview/plugin.xml
@@ -39,11 +39,22 @@
       <menuContribution
             locationURI="menu:org.eclipse.ui.main.menu">
          <menu
+               id="File"
                label="File">
             <command
+                  commandId="org.eclipse.ui.window.preferences"
+                  label="Preferences"
+                  style="push">
+            </command>
+            <command
                   commandId="org.eclipse.ui.file.exit"
+                  id="org.eclipse.ui.file.exit.Exit"
                   label="Exit">
             </command>
+            <separator
+                  name="com.basf.xpview.separator1"
+                  visible="true">
+            </separator>
          </menu>
       </menuContribution>
    </extension>
@@ -55,7 +66,7 @@
                closeable="true"
                id="com.basf.xpview.plantviewer.views.PlantStructureView"
                minimized="false"
-               ratio="0.5"
+               ratio="0.3"
                relationship="left"
                relative="org.eclipse.ui.editorss"
                showTitle="true"
@@ -66,13 +77,25 @@
                id="com.basf.xpview.plantviewer.views.PropertyView"
                minimized="false"
                moveable="true"
-               ratio="0.3"
+               ratio="0.6"
                relationship="bottom"
                relative="com.basf.xpview.plantviewer.views.PlantStructureView"
                showTitle="true"
                visible="true">
          </view>
       </perspectiveExtension>
+   </extension>
+   <extension
+         id="product"
+         point="org.eclipse.core.runtime.products">
+      <product
+            application="com.basf.xpview.application"
+            name="XPView">
+         <property
+               name="appName"
+               value="XPView">
+         </property>
+      </product>
    </extension>
 
 </plugin>
