--- a/com.basf.xpview/build.properties
+++ b/com.basf.xpview/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .
+               .,\
+               toc.xml,\
+               html/,\
+               preferences.ini
