add issue handling, add message view

--- a/com.basf.xpview.libs/build.properties
+++ b/com.basf.xpview.libs/build.properties
@@ -1,3 +1,4 @@
 output.. = bin/
 bin.includes = META-INF/,\
-               libs/vecmath-1.5.2.jar
+               libs/,\
+               libs/log4j-1.2.16.jar
