--- a/com.basf.xpview.plantviewer/plugin.xml
+++ b/com.basf.xpview.plantviewer/plugin.xml
@@ -12,6 +12,13 @@
             id="com.basf.xpview.plantviewer.views.PlantStructureView"
             name="Plant Structure">
       </view>
+      <view
+            allowMultiple="false"
+            class="com.basf.xpview.plantviewer.views.PropertyView"
+            id="com.basf.xpview.plantviewer.views.PropertyView"
+            name="PropertyView"
+            restorable="true">
+      </view>
    </extension>
    <extension
          point="org.eclipse.help.contexts">
@@ -30,6 +37,33 @@
             id="com.basf.xpview.plantviewer.editors.URIEditor"
             name="URIEditor">
       </editor>
+   </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="com.basf.xpview.perspective">
+         <view
+               closeable="false"
+               id="com.basf.xpview.plantviewer.views.PlantStructureView"
+               minimized="false"
+               moveable="true"
+               ratio="0.3"
+               relationship="left"
+               relative="org.eclipse.ui.editorss"
+               showTitle="true"
+               visible="true">
+         </view>
+         <view
+               closeable="false"
+               id="com.basf.xpview.plantviewer.views.PropertyView"
+               minimized="false"
+               moveable="true"
+               relationship="stack"
+               relative="com.basf.xpview.ui.MessageView"
+               showTitle="true"
+               visible="true">
+         </view>
+      </perspectiveExtension>
    </extension>
 
 </plugin>
