--- a/com.basf.xpview.model/plugin.xml
+++ b/com.basf.xpview.model/plugin.xml
@@ -17,10 +17,6 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            commandId="com.basf.xpview.model.commands.sampleCommand"
-            class="com.basf.xpview.model.handlers.ImportFileHandler">
-      </handler>
-      <handler
             class="com.basf.xpview.model.handlers.ImportFileHandler"
             commandId="com.basf.xpview.model.handlers.ImportFileHandler">
       </handler>
@@ -50,9 +46,9 @@
          </separator>
       </menuContribution>
       <menuContribution
-            locationURI="toolbar:org.eclipse.ui.main.toolbar?before=additions">
+            locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
          <toolbar
-               id="com.basf.xpview.model.toolbars.sampleToolbar">
+               id="com.basf.xpview.model.toolbar1">
             <command
                   commandId="com.basf.xpview.model.handlers.ImportFileHandler"
                   icon="icons/disk.png"
