--- a/com.basf.xpview/plugin.xml
+++ b/com.basf.xpview/plugin.xml
@@ -47,6 +47,10 @@
             </command>
          </menu>
       </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
+      </menuContribution>
    </extension>
    <extension
          id="product"
