--- a/com.basf.xpview.libs/build.properties
+++ b/com.basf.xpview.libs/build.properties
@@ -1,4 +1,10 @@
 output.. = bin/
 bin.includes = META-INF/,\
                libs/,\
-               libs/log4j-1.2.16.jar
+               libs/log4j-1.2.16.jar,\
+               libs/dom4j-1.6.1.jar,\
+               libs/poi-3.9-20121203.jar,\
+               libs/poi-ooxml-3.9-20121203.jar,\
+               libs/poi-ooxml-schemas-3.9-20121203.jar,\
+               libs/stax-api-1.0.1.jar,\
+               libs/xmlbeans-2.3.0.jar
