--- a/com.basf.xpview.plantviewer/plugin.xml
+++ b/com.basf.xpview.plantviewer/plugin.xml
@@ -65,5 +65,8 @@
          </view>
       </perspectiveExtension>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+   </extension>
 
 </plugin>
